crates/runtime/tests/snapshots/integration__mysql_federation_inner_join_with_acc_inner_join_0.snap
---
source: crates/runtime/tests/integration.rs
description: "Query: SELECT * FROM line inner join acc_line on acc_line.l_orderkey = line.l_orderkey LIMIT 10"
---
+---------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                              |
+---------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| logical_plan  | Limit: skip=0, fetch=10                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                           |
|               |   Inner Join: line.l_orderkey = acc_line.l_orderkey                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                               |
|               |     Federated                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                     |
|               |  Projection: line.l_orderkey, line.l_partkey, line.l_suppkey, line.l_linenumber, line.l_quantity, line.l_extendedprice, line.l_discount, line.l_tax, line.l_returnflag, line.l_linestatus, line.l_shipdate, line.l_commitdate, line.l_receiptdate, line.l_shipinstruct, line.l_shipmode, line.l_comment                                                                                                                                                                                                                                                           |
|               |   TableScan: line projection=[l_orderkey, l_partkey, l_suppkey, l_linenumber, l_quantity, l_extendedprice, l_discount, l_tax, l_returnflag, l_linestatus, l_shipdate, l_commitdate, l_receiptdate, l_shipinstruct, l_shipmode, l_comment]                                                                                                                                                                                                                                                                                                                         |
|               |     TableScan: acc_line projection=[l_orderkey, l_partkey, l_suppkey, l_linenumber, l_quantity, l_extendedprice, l_discount, l_tax, l_returnflag, l_linestatus, l_shipdate, l_commitdate, l_receiptdate, l_shipinstruct, l_shipmode, l_comment]                                                                                                                                                                                                                                                                                                                   |
| physical_plan | CoalescePartitionsExec: fetch=10                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                  |
|               |   HashJoinExec: mode=CollectLeft, join_type=Inner, accumulator=MinMaxLeftAccumulator, on=[(l_orderkey@0, l_orderkey@0)], fetch=10                                                                                                                                                                                                                                                                                                                                                                                                                                 |
|               |     SchemaCastScanExec                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            |
|               |       BytesProcessedExec                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                          |
|               |         VirtualExecutionPlan name=mysql compute_context=host=localhost,port=<PORT>,db=mysqldb,user=root base_sql=SELECT `lineitem`.`l_orderkey`, `lineitem`.`l_partkey`, `lineitem`.`l_suppkey`, `lineitem`.`l_linenumber`, `lineitem`.`l_quantity`, `lineitem`.`l_extendedprice`, `lineitem`.`l_discount`, `lineitem`.`l_tax`, `lineitem`.`l_returnflag`, `lineitem`.`l_linestatus`, `lineitem`.`l_shipdate`, `lineitem`.`l_commitdate`, `lineitem`.`l_receiptdate`, `lineitem`.`l_shipinstruct`, `lineitem`.`l_shipmode`, `lineitem`.`l_comment` FROM `lineitem` |
|               |     SchemaCastScanExec                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            |
|               |       BytesProcessedExec                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                          |
|               |         DataSourceExec: partitions=3, partition_sizes=[33, 33, 33]                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                |
|               |                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                   |
+---------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
