crates/runtime/tests/snapshots/integration__mysql_federation_push_down_select_order_by_limit_10.snap
---
source: crates/runtime/tests/integration.rs
description: "Query: SELECT * FROM line ORDER BY line.l_orderkey DESC LIMIT 10"
---
+---------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                           |
+---------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| logical_plan  | Federated                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                      |
|               |  Limit: skip=0, fetch=10                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                       |
|               |   Sort: line.l_orderkey DESC NULLS FIRST                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                       |
|               |     Projection: line.l_orderkey, line.l_partkey, line.l_suppkey, line.l_linenumber, line.l_quantity, line.l_extendedprice, line.l_discount, line.l_tax, line.l_returnflag, line.l_linestatus, line.l_shipdate, line.l_commitdate, line.l_receiptdate, line.l_shipinstruct, line.l_shipmode, line.l_comment                                                                                                                                                                                                                                                                                                     |
|               |       TableScan: line projection=[l_orderkey, l_partkey, l_suppkey, l_linenumber, l_quantity, l_extendedprice, l_discount, l_tax, l_returnflag, l_linestatus, l_shipdate, l_commitdate, l_receiptdate, l_shipinstruct, l_shipmode, l_comment]                                                                                                                                                                                                                                                                                                                                                                  |
| physical_plan | SchemaCastScanExec                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                             |
|               |   CooperativeExec                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                              |
|               |     BytesProcessedExec                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                         |
|               |       VirtualExecutionPlan name=mysql compute_context=host=localhost,port=<PORT>,db=mysqldb,user=root base_sql=SELECT `lineitem`.`l_orderkey`, `lineitem`.`l_partkey`, `lineitem`.`l_suppkey`, `lineitem`.`l_linenumber`, `lineitem`.`l_quantity`, `lineitem`.`l_extendedprice`, `lineitem`.`l_discount`, `lineitem`.`l_tax`, `lineitem`.`l_returnflag`, `lineitem`.`l_linestatus`, `lineitem`.`l_shipdate`, `lineitem`.`l_commitdate`, `lineitem`.`l_receiptdate`, `lineitem`.`l_shipinstruct`, `lineitem`.`l_shipmode`, `lineitem`.`l_comment` FROM `lineitem` ORDER BY `lineitem`.`l_orderkey` DESC LIMIT 10 |
|               |                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                |
+---------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
